...
            android:textSize="@dimen/textSizeSmaller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/paddingDefault"
            android:layoutAnimation="@anim/item_animation"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
...
